# mycela

./: .gitignore  Cargo.toml  INSTALL_PROTOC.md  Notes.md  PROTO_QUICKSTART.md  README.md  SETUP_COMPLETE.md  build.rs  index.html  plan.md  proto_demo.html  test.db  test_config_load.rs
docs/: CONFIG_ERROR_HANDLING.md  PROTO_WIDGETS.md
examples/: beamline_config.json  demo_app.json  demo_config copy.json  demo_config.json  test_duplicate_id.json  test_invalid_type.json  test_missing_label.json  test_missing_root_fields.json
examples/demo_desktop/: assets.rs  main.rs
examples/demo_server/: epics_simulator.rs  main.rs  modbus_simulator.rs
logs/: demo_desktop.debug.2026-05-25  demo_desktop.log.2026-05-25  demo_server.debug.2026-05-25  demo_server.log.2026-05-25  mycela.log.2026-05-25
proto/: pv_service.proto  widgets.proto
src/: app.rs  channel.rs  config.rs  demo_simulator.rs  desktop_transport.rs  epics_channel.rs  grpc_client.rs  ipc.rs  ipc_dispatch.rs  lib.rs  logging.rs  main.rs  modbus_client.rs  modbus_server.rs  protocol_control.rs  pv_monitor.rs  pv_server.rs  server_setup.rs  state.rs  test_helpers.rs  widget_factory.rs  widgets.rs
src/inputs/: mod.rs  text_entry.rs
src/pages/: home.rs  mod.rs  proto_demo.rs
src/tests/: config.rs  modbus_client.rs
src/widgets/: button.rs  chart.rs  gauge.rs  group.rs  led.rs  mod.rs  multi_state_led.rs  select.rs  slider.rs  text_entry.rs  text_update.rs  toggle_button.rs
src/widgets/tests/: button.rs  gauge.rs  led.rs  mod.rs  select.rs  slider.rs  text_entry.rs  text_update.rs  toggle_button.rs
static/: desktop_transport.js  style.css  tooltip.js
tests/: test_config_alarm_metadata.rs  test_config_modbus_serde.rs  test_config_widget_config.rs  test_epics_connection_events.rs  test_ipc_contract.rs  test_ipc_dispatch.rs  test_modbus_build_channel_value.rs  test_modbus_connection_events.rs  test_transport_parity.rs  test_widget_button.rs  test_widget_gauge.rs  test_widget_led.rs  test_widget_multi_state_led.rs  test_widget_select.rs  test_widget_slider.rs  test_widget_text_entry.rs  test_widget_text_readout.rs  test_widget_toggle_button.rs  test_widgets_alarm_helpers.rs  test_widgets_collect_data_widgets.rs  test_widgets_container_style.rs  test_widgets_control_limits.rs  test_widgets_disconnection_response.rs
