[package]
name = "ctrl-sys-widgets"
version = "0.1.0"
edition = "2021"
default-run = "ctrl-demo-server"

[[bin]]
name = "ctrl-demo-server"
path = "src/main.rs"

[[bin]]
name = "test-config-load"
path = "test_config_load.rs"

[dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace", "cors"] }

# HTML templating
maud = { version = "0.27.0", features = ["axum"] }

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Concurrent caching
dashmap = "6"

# Async streams (for SSE)
tokio-stream = "0.1.18"
futures = "0.3.32"
async-stream = "0.3"

# Time handling
chrono = "0.4.44"

# EPICS
pvxs-sys = { path = "../pvxs-sys" }
# pvxs-sys = "0.1.1"

[profile.release]
opt-level = "z"
lto = true
