[package]
name = "ctrl-sys-widgets"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-config-load"
path = "test_config_load.rs"

[[example]]
name = "demo_server"
path = "examples/demo_server/main.rs"
required-features = ["epics", "modbus"]

[dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1.51.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace", "cors"] }

# HTML templating
maud = { version = "0.27.0", features = ["axum"] }

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Concurrent caching
dashmap = "6"

# Async streams (for SSE)
tokio-stream = "0.1.18"
futures = "0.3.32"
async-stream = "0.3"

# Time handling
chrono = "0.4.44"

# Charting (SVG-only backend, minimal deps)
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }

# EPICS (optional — enable with feature "epics")
pvxs-sys = { path = "../pvxs-sys", optional = true }
# pvxs-sys = { version = "0.1.1", optional = true }

# Modbus (optional — enable with feature "modbus")
tokio-modbus = { version = "0.17.0", features = ["tcp"], optional = true }

[features]
default = ["epics", "modbus"]
epics  = ["dep:pvxs-sys"]
modbus = ["dep:tokio-modbus"]

[dev-dependencies]
rand = "0.10.1"

[profile.release]
opt-level = "z"
lto = true
