[package]
name = "mycela"
version = "0.1.0"
edition = "2021"
authors = ["Tine Zata <https://github.com/TineZata>"]
description = "Distributed control system framework and UI widgets written in rust"
license = "MPL-2.0"
repository = "https://github.com/TineZata/mycela"
keywords = ["control systems", "widgets", "ui", "gui", "dcs", "epics", "modbus"]
categories = ["development-tools", "science"]
readme = "README.md"
documentation = "https://docs.rs/mycela"
homepage = "https://github.com/TineZata/mycela"

[[bin]]
name = "test-config-load"
path = "test_config_load.rs"

[[example]]
name = "demo_server"
path = "examples/demo_server/main.rs"
required-features = ["epics", "modbus"]

[[example]]
name = "demo_desktop"
path = "examples/demo_desktop/main.rs"
required-features = ["epics", "modbus", "desktop"]

[dependencies]
# Web framework
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["fs", "trace", "cors"] }

# HTML templating
maud = { version = "0.27.0", features = ["axum"] }

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2"

# Concurrent caching
dashmap = "6.2.1"

# Async streams (for SSE)
tokio-stream = "0.1.18"
futures = "0.3.32"
async-stream = "0.3"

# Time handling
chrono = "0.4.44"

# Charting (SVG-only backend, minimal deps)
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }

# EPICS (optional — enable with feature "epics")
# pvxs-sys = { path = "../pvxs-sys", optional = true }
pvxs-sys = { version = "0.1.2", optional = true }

# Modbus (optional — enable with feature "modbus")
tokio-modbus = { version = "0.17.0", features = ["tcp"], optional = true }

# Desktop (optional — enable with feature "desktop")
wry   = { version = "0.55", optional = true }
winit = { version = "0.30", optional = true }

[features]
default = ["epics", "modbus"]
epics   = ["dep:pvxs-sys"]
modbus  = ["dep:tokio-modbus"]
desktop = ["dep:wry", "dep:winit"]

[dev-dependencies]
rand = "0.10.1"

[profile.release]
opt-level = "z"
lto = true
